--- a/NovaChatClient/logindialog.ui
+++ b/NovaChatClient/logindialog.ui
@@ -90,13 +90,13 @@
         <widget class="QLabel" name="user_label">
          <property name="minimumSize">
           <size>
-           <width>0</width>
+           <width>48</width>
            <height>25</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>16777215</width>
+           <width>48</width>
            <height>25</height>
           </size>
          </property>
@@ -141,13 +141,13 @@
         <widget class="QLabel" name="pw_label">
          <property name="minimumSize">
           <size>
-           <width>0</width>
+           <width>48</width>
            <height>25</height>
           </size>
          </property>
          <property name="maximumSize">
           <size>
-           <width>16777215</width>
+           <width>48</width>
            <height>25</height>
           </size>
          </property>
@@ -205,7 +205,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QLabel" name="forget_label">
+        <widget class="ClickedLabel" name="forget_label">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -384,6 +384,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ClickedLabel</class>
+   <extends>QLabel</extends>
+   <header>clickedlabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources>
   <include location="rc.qrc"/>
  </resources>
