--- a/NovaChatClient/chatdialog.ui
+++ b/NovaChatClient/chatdialog.ui
@@ -214,7 +214,7 @@
           <number>9</number>
          </property>
          <item>
-          <widget class="QLineEdit" name="search_edit"/>
+          <widget class="CustomizeEdit" name="search_edit"/>
          </item>
          <item>
           <spacer name="horizontalSpacer">
@@ -255,17 +255,20 @@
        </widget>
       </item>
       <item>
-       <widget class="QListWidget" name="chat_user_list">
+       <widget class="ChatUserList" name="chat_user_list">
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>60</height>
+          <height>0</height>
          </size>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QListWidget" name="search_list"/>
+      </item>
+      <item>
+       <widget class="QListWidget" name="con_user_list"/>
       </item>
      </layout>
     </widget>
@@ -565,6 +568,16 @@
    <class>ClickedBtn</class>
    <extends>QPushButton</extends>
    <header location="global">clickedbtn.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CustomizeEdit</class>
+   <extends>QLineEdit</extends>
+   <header location="global">customizeedit.h</header>
+  </customwidget>
+  <customwidget>
+   <class>ChatUserList</class>
+   <extends>QListWidget</extends>
+   <header location="global">chatuserlist.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
